--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,15 @@
 @tailwind utilities;
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-work-sans), Arial, Helvetica, sans-serif;
+}
+
+.font-averia {
+  font-family: var(--font-averia-libre), serif;
+}
+
+.font-work-sans {
+  font-family: var(--font-work-sans), sans-serif;
 }
 
 @layer utilities {
